# stata_parquet_io

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmarks.md  build.rs  test_results.txt
.cargo/: config.toml
.github/workflows/: build.yml
crates/stata/: Cargo.toml
crates/stata-jv/: Cargo.toml  build.rs
crates/stata-jv/src/: lib.rs
crates/stata-sys/: Cargo.toml  build.rs  wrapper.h  wrapper_generated.h
crates/stata-sys/src/: lib.rs
java/: dependency-reduced-pom.xml  pom.xml
java/src/main/java/: ParquetIO.java
scripts/: test_output.txt
src/: describe.rs  downcast.rs  fast_cache.rs  lib.rs  main.rs  mapping.rs  read.rs  read_java.rs  read_java_temp.rs  sql_from_if.rs  stata_interface.rs  utilities.rs  write.rs  write_java.rs
src/ado/: benchmark.do  java_call.do  polars_parquet.ado  reset_code.do  test.do
src/ado/p/: polars_parquet.ado  polars_parquet.pkg  pq.ado  pq.pkg  pq.sthlp  pq_describe.ado  pq_save.ado  pq_use.ado
src/ado/testing/: _bench_default_vs_legacy.do  _bench_default_vs_legacy_quick.do  append.do  append_error_test.do  arrow_extension_type.do  benchmark.do  benchmark_fast_vs_normal_parquet.do  cast.do  cast_csv.do  cast_spss.do  cast_test.csv  cast_test.sav  check_rust_strl.do  compress_downcast_no_loss.do  data_integrity_csv_spss.do  dates.do  debug_strl_save.do  describe.do  drop_nostrl.do  format_autoinfer.do  hive_relaxed.do  if_tests.do  in_tests.do  java_call.do  merge.do  merge_format_wrappers.do  path_fixes.do  random.do  rename.do  roundtrip_lots_of_vars.do  save_chunked.do  save_label.do  save_options.do  save_varlist.do  special_chars.do  strl.do  strl_boundary.do  strl_if.do  strl_missing.do  strl_only_append.do  (+7 more)
src/ado/testing/csv/: append_csv.do  benchmark_csv_vs_native.do  benchmark_datetime_csv.do  benchmark_fast_vs_normal.do  benchmark_use_csv_sizes.do  benchmark_use_csv_sizes_profile.do  compress_downcast_no_loss_csv.do  dates_csv.do  drop_nostrl_csv.do  if_tests_csv.do  in_tests_csv.do  save_chunked_csv.do  save_options_csv.do  special_chars_csv.do  strl_boundary_csv.do  strl_csv.do  strl_if_csv.do  strl_missing_csv.do  strl_only_append_csv.do  test_batching_csv.do  test_random_type_csv.do  use_options_csv.do
src/ado/testing/sas/: benchmark_fast_vs_normal_sas.do  benchmark_sas_if_projection.do  benchmark_sas_read.do  data_integrity_sas.do  preserve_order_hhpub25.do  startup_sas.do  use_append_merge_sas.do
src/ado/testing/spss/: _probe_import_spss.do  _probe_import_spss_vars.do  _probe_pq_spss_path.do  _probe_pq_spss_path2.do  _probe_sample_sav.do  append_spss.do  benchmark_fast_vs_normal_spss.do  benchmark_spss_if_projection.do  benchmark_spss_vs_native.do  compress_downcast_no_loss_spss.do  dates_spss.do  drop_nostrl_spss.do  if_tests_spss.do  in_tests_spss.do  save_chunked_spss.do  save_options_spss.do  special_chars_spss.do  startup_spss.do  strl_boundary_spss.do  strl_if_spss.do  strl_missing_spss.do  strl_only_append_spss.do  strl_spss.do  test_batching_spss.do  test_random_type_spss.do  use_options_spss.do
src/ado/testing_dont_run/: super_tall.do
src/stata_interface/: debug.rs  mod.rs  release.rs
test_data/pyreadstat/: sample.dta
