[workspace]
members = [
    "crates/stata-sys",
    "."
]

[package]
name = "stata_parquet_io"
version = "0.1.0"
authors = ["Jon Rothbaum <jlrothbaum@gmail.com>"]
edition = "2021"
description = "Stata plugin to read/write parquet files using polars Rust"
license = "MIT"
default-run = "stata_parquet_io"
repository = "https://github.com/jrothbaum/stata_parquet_io"

[lib]
name = "stata_parquet_io"
crate-type= ["cdylib"]

[dependencies]
path_abs = "0.5"
polars = { version = "0.47.1", features=["lazy","parquet","streaming","dtype-categorical"] }
polars-lazy = { version = "0.47.1", features=["strings"] }
polars-sql = "0.47.1" 
polars-core = "0.47.1"
stata-sys = { path = "crates/stata-sys" }
rayon = "1.8"
log = "0.4"
env_logger = "0.11.8"
serde = "1.0.219"
serde_json = "1.0.140"


[profile.release]
strip = "debuginfo"  # Remove debug info but keep symbols needed for performance
panic = "unwind"     # Default panic behavior (often better for libraries)
#   lto = "fat"         # More aggressive link-time optimization for speed
#   codegen-units = 1   # Fewer codegen units allow more optimization