[package]
name = "stata-jv"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
polars = { version = "0.52.0", features=["lazy",
    "parquet",
    # "streaming",
    "dtype-categorical",
    "dtype-i8",
    "dtype-i16",
    "dtype-u8",
    "dtype-u16",
] }
polars-sql = "0.52.0" 
polars-arrow = "0.52.0"


[build-dependencies]
dotenvy = "0.15"
glob = "0.3"
walkdir = "2"