[package]
name = "stata-sys"
version = "1.0.0"
authors = ["Jonathan Rothbaum <jon.rothbaum@gmail.com>"]
edition = "2021"
description = "Raw bindings to stata stplugin 3.0 cpp"
license = "MIT"
repository = "https://github.com/jrothbaum/stata_parquet_io"
links = "stata_plugin"
build = "build.rs"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
pkg-config = "0.3"

[target.'cfg(windows)'.dependencies]
libz-sys = "1.1"