[package]
name = "stata-sys"
version = "1.0.0"
authors = ["Jonathan Rothbaum <jon.rothbaum@gmail.com>"]
edition = "2024"
description = "Raw bindings to stata stplugin 3.0 cpp"
license = "MIT"
repository = "https://github.com/jrothbaum/stata_parquet_io"
links = "stplugin_support"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.72.1"