[package]
name = "stata"
version = "0.1.0"
authors = ["Jonathan Rothbaum <jon.rothbaum@gmail.com>"]
edition = "2021"
description = "Safe Rust wrappers for the Stata plugin API"
license = "MIT"
repository = "https://github.com/jrothbaum/stata_parquet_io"

[dependencies]
stata-sys = { path = "../stata-sys" }